Fixed header and logo size on small screens.

--- a/docroot/themes/contrib/civic/civic-library/components/00-base/_variables.components.scss
+++ b/docroot/themes/contrib/civic/civic-library/components/00-base/_variables.components.scss
@@ -934,7 +934,7 @@ $civic-content-dark-background-color: inherit !default;
 // Header.
 //
 $civic-header-logo-desktop-width: 230px !default;
-$civic-header-logo-mobile-width: 200px !default;
+$civic-header-logo-mobile-width: 125px !default;
 $civic-header-desktop-menu-breakpoint: 'm' !default;
 $civic-header-light-top-color: civic-color-shade-dark(80) !default;
 $civic-header-light-top-background-color: civic-color-neutral(10) !default;
