--- a/docroot/themes/contrib/civic/civic-library/components/03-organisms/header/header.scss
+++ b/docroot/themes/contrib/civic/civic-library/components/03-organisms/header/header.scss
@@ -13,7 +13,11 @@
   }
 
   &__logo {
-    padding: civic-space(3) 0;
+    padding: civic-space() 0;
+
+    @include civic-breakpoint($civic-header-desktop-menu-breakpoint) {
+      padding: civic-space(3) 0;
+    }
   }
 
   &__middle {
@@ -27,9 +31,10 @@
   }
 
   .civic-logo {
-    max-width: rem($civic-header-logo-mobile-width);
+    width: rem($civic-header-logo-mobile-width);
 
-    @include civic-breakpoint('m') {
+    @include civic-breakpoint($civic-header-desktop-menu-breakpoint) {
+      width: auto;
       max-width: rem($civic-header-logo-desktop-width);
     }
   }
